CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (TE_ET CXX)

SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../OutPut/bin)
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../OutPut/lib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Common/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Utils/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Log/inc)

ADD_SUBDIRECTORY(Log)
ADD_SUBDIRECTORY(test1)
ADD_SUBDIRECTORY(Proparse)
